# OdeRelic

./: .gitignore  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: cross_build.yml  dependency-submission.yml
assets/cheats/gamecube - wii/: C93P.txt  C94E.txt  C94P.txt  C9GP.txt  C9HE.txt  C9IE.txt  C9IP.txt  C9RP.txt  C9XE.txt  C9XP.txt  C9YP.txt  DAXP01.txt  EA2J.txt  EA2P.txt  EA5E.txt  EA6J.txt  EA8E.txt  EAAE.txt  EABE.txt  EABP.txt  EACP.txt  EAEE.txt  EAFE.txt  EAFP.txt  EAGE.txt  EAGJ.txt  EAGP.txt  EAIE.txt  EAJP.txt  EAKE.txt  EAMP.txt  EANE.txt  EAOE.txt  EAPE.txt  EAPP.txt  EAWE.txt  EAWJ.txt  EAWP.txt  F41E.txt  FA4P.txt  (+1305 more)
i18n/: OdeRelic_de.ts  OdeRelic_en.ts  OdeRelic_ja.ts  OdeRelic_pt_BR.ts
resources/: ps2-gameslist.txt
resources/cheats/gamecube-wii/: C93E.txt  C99P.txt  C9HP.txt  C9PP.txt  C9QP.txt  DMHE08.txt  DMHJ08.txt  DQAJK2.txt  EA2E.txt  EA4E.txt  EA4P.txt  EA5P.txt  EA7P.txt  EA8J.txt  EA8M.txt  EAAJ.txt  EAAP.txt  EACE.txt  EADE.txt  EADP.txt  EAHP.txt  EAIJ.txt  EAIP.txt  EAJE.txt  EAJJ.txt  EAKJ.txt  EAKP.txt  EALE.txt  EALP.txt  EAME.txt  EANP.txt  EAOP.txt  EARP.txt  EAVE.txt  EAVJ.txt  EAVP.txt  FA2J.txt  FA4J.txt  FA7P.txt  FA8F.txt  (+1523 more)
resources/dreamcast/openmenu/: track03.iso
resources/dreamcast/openmenu/menu_data/: openmenu.elf
resources/dreamcast/openmenu/menu_data/theme/cust_0/: theme.ini
resources/dreamcast/openmenu/menu_data/theme/cust_1/: theme.ini
src-cpp/: HomeScreen.qml  OplManager.qml  PS1Manager.qml  SwissManager.qml  main.cpp  main.qml  qml.qrc
src-cpp/core/: filesystem_cache.h  opl_library_service.cpp  opl_library_service.h  ps1_xstation_library_service.cpp  ps1_xstation_library_service.h  rvz_native_converter.cpp  rvz_native_converter.h  swiss_library_service.cpp  swiss_library_service.h  system_utils.cpp  system_utils.h  translation_manager.cpp
src-cpp/core/common/: system_utils.h
src-cpp/core/filesystem/: filesystem_cache.cpp
src-cpp/core/i18m/: translation_manager.cpp  translation_manager.h
src-cpp/core/logging/: logger.cpp  logger.h
src-cpp/ngc/: SwissManager.qml  swiss_library_service.cpp
src-cpp/ps2/: OplManager.qml  opl_library_service.cpp
src-cpp/psx/: PS1Manager.qml  ps1_xstation_library_service.cpp
tests/: CMakeLists.txt  test_xstation.cpp  tst_opllibraryservice.cpp  tst_rvznativeconverter.cpp  tst_swisslibraryservice.cpp  tst_systemutils.cpp  verify_resources.cmake
tests/cpp/: test_dreamcast_iso_builder.cpp  test_dreamcast_library_service.cpp  test_gdrom_builder.cpp  test_openmenu_dat_manager.cpp  test_openmenu_image_provider.cpp  test_pvr_texture_coder.cpp  test_xstation.cpp  tst_filesystemcache.cpp  tst_logger.cpp  tst_opllibraryservice.cpp  tst_qmlui.cpp  tst_swisslibraryservice.cpp  tst_translationmanager.cpp
tests/qml/: tst_dreamcastmanager.qml  tst_main.qml  tst_oplmanager.qml  tst_ps1manager.qml  tst_swissmanager.qml
